# cw-neural-network-recognition

./: .gitignore  LICENSE  MANIFEST.in  README.md  configure.py  setup.cfg  setup.py
.github/workflows/: build.yml
basic_neural_tests/: test1.py  test2.py  test3.py
neural/: nnet.py
src/cw_nnrec/: __main__.py  facecomp.py
src/neural/: nnet.py
src/ui/: face_comparison_module.pyw  face_comparison_module_.ui  finding_objects_module.pyw  finding_objects_module_.py  finding_objects_module_.ui  main.pyw  main_.ui
tests/: test_facecomp.py
ui/: face_comparison_module.pyw  face_comparison_module_.py  face_comparison_module_.ui  finding_objects_module.pyw  finding_objects_module_.py  finding_objects_module_.ui  main.py  main.pyw  main.ui  main_.py
