[metadata]
name = cw-nnrec
version = 0.9
author = andinoriel
author_email = simonnikolaj20@gmail.com
description = some NN uses
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
test_suite = tests
include_package_data = True
install_requires =
    numpy
    pytest
    dlib
    scipy
    scikit-image
    argparse

[options.entry_points]
console_scripts =
    cw-nnrec = cw_nnrec.__main__:main

[options.packages.find]
where = src
